--- a/node-app/package.json
+++ b/node-app/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
+    "express": "4.13.3",
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
     "karma": "~0.12",
@@ -14,6 +15,7 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
+    "nodemon": "1.7.3",
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6"
   },
@@ -21,7 +23,7 @@
     "postinstall": "bower install",
 
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1",
+    "start": "node server/app.js",
 
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
